# azad_hamo_2025

./: README.md  new_map_1.pgm  new_map_1.yaml  turtlebot3_world.launch.py
Test_5/: CMakeLists.txt  package.xml
Test_5/config/: joint_names_Test_5.yaml
Test_5/launch/: display.launch  gazebo.launch
Test_5/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  base_link.STL
Test_5/urdf/: Test_5.csv  Test_5.urdf
diffdrive_arduino/bringup/config/: diffbot_controllers.yaml
diffdrive_arduino/bringup/launch/: diffbot.launch.py
diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
diffdrive_arduino/description/urdf/: Test_5.urdf  Test_5.urdf.xacro  diffbot_description.urdf.xacro
diffdrive_arduino/doc/: userdoc.rst
diffdrive_arduino/hardware/: diffbot_system.cpp
nav2_auto/: CMakeLists.txt  package.xml
nav2_auto/src/: goal_sender.py  init_pose_pub.py
nav2_bringup/: CMakeLists.txt
nav2_bringup/launch/: navigation_launch.py
nav2_bringup/params/: nav2_params.yaml
odom_tf_pub/: CMakeLists.txt  package.xml
odom_tf_pub/src/: odom_tf_pub.py
perception/: CMakeLists.txt  package.xml
perception/src/: aruco_detection.py  camera_calibration.py
tf_trees/: frames_2025-03-12_04.12.01.gv  frames_2025-03-12_23.52.55.gv  frames_2025-03-13_00.00.17.gv  frames_2025-03-13_00.31.23.gv  frames_2025-03-13_00.36.42.gv
turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_gazebo/launch/: turtlebot3_world.launch.py
turtlebot3_gazebo/urdf/: Test_5.urdf
turtlebot3_navigation2/: CMakeLists.txt
turtlebot3_navigation2/launch/: navigation2.launch.py
(+4 files in other folders)
