<?xml version="1.0"?>
<package format="3">
  <name>Test_5</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for Test_5
    This package contains configuration data, 3D models, and launch files
    for Test_5 robot.
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

